restaurants Page gap fixed

--- a/src/pages/RestaurantsPage/RestaurantsPage.module.scss
+++ b/src/pages/RestaurantsPage/RestaurantsPage.module.scss
@@ -47,7 +47,7 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        gap: 21px;
+        gap: 14px;
         @include smallDesktopScreen {
           display: flex;
           flex-flow: row;
